Validation, DTO, refactoring added